fixing the wrapping of large html urls in comments... I am pretty sure that we can accept html in comments... or we could not show if html is in there maybe

--- a/public/stylesheets/hooppps.css
+++ b/public/stylesheets/hooppps.css
@@ -330,4 +330,7 @@ h3 {
   margin-left: 40px;
   margin-top: 5px;
   font-size: 10px;
+  -webkit-text-overflow: ellipsis;
+  white-space: no-wrap;
+  overflow: hidden;
 }
